# preg-cal-py

./: .gitignore  Dockerfile  LICENSE  README.md  cli.py  main.py  preg-cal.ics  preg_cal.py  pyproject.toml  requirements.txt  style.css
.github/workflows/: deploy.yaml
static/: script.js  style.css
